[tool.poetry]
name = "vitalx-notebook"
version = "0.1.1"
description = ""
authors = ["Vital <help@tryvital.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
vitalx-aggregation = "^0.1"
polars = "^1.7"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
vitalx-cli = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
